--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=CloudService
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/cloud
+spring.datasource.url=jdbc:postgresql://cloud:5432/cloud
 spring.datasource.username=netology_user
 spring.datasource.password=111
 spring.jpa.hibernate.ddl-auto=update
